--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,109 +1,135 @@
-.contentHeader {
+homeContent {
     display: flex;
     flex-direction: column;
+}
+
+
+section {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: fit-content;
+    align-items: center;
+    margin: 20px 0;
+}
+
+section * {
+    color: #1e2022;
     font-family: 'Roboto Condensed', sans-serif;
 }
 
-.headerMainDiv {
-    display: flex;
-    flex-direction: column;
-    height: 50vh;
-    width: 100vw;
-    background-color:  #fbfbfb;
-    align-items: center;
-    justify-content: space-evenly;
-}
-
-
-form {
-    display: flex;
-    width: 100%;
-    align-items: center;
-    justify-content: flex-end;
-    margin-right: 30px;
-
-}
-
-.searchInputDiv{
+.card, .cardReverse {
     display: flex;
     flex-direction: row;
-    flex-wrap: nowrap;
-    height: 35px;
-    width: 25%;
-    min-width: 100px;
-    justify-content: flex-end;
-    align-items: center;
-    border: 2px solid #c1c1c19a;
-    border-radius: 5px;
-    margin-right: 20px;
-}
-
-.searchInput{
-    width: 90%;
-    height: 30px;
-    padding: 5px;
-    border: none;
-    background-color:  #fbfbfb;
-    outline: none;
-    margin-right: 20px;
-}
-
-::placeholder {
-    font-family: 'Roboto Condensed', sans-serif;
-    letter-spacing: 1.2px;
-}
-
-.contentSearchIcon {
-    display: flex;
-    height: 80%;
-    width: 22px;
-    background-color: #202020d1;
-    margin-right: 5px;
-    justify-content: center;
-    align-items: center;
+    width: 55%;
+    min-width: 310px;
+    height: 210px;
+    justify-content: space-between;
+    position: relative;
+    background-color: rgba(246, 246, 246, 0.334);
+    margin-bottom: 80px;
     cursor: pointer;
-    position: absolute;
-    right: 0;
-    color: white;
 }
 
-.selectComponent{
-    width: 120px;
-    height: 40px;
-    border: 2px solid #c1c1c19a;
-    background-color:  #fbfbfb;
-    border-radius: 5px;
-    font-family: 'Roboto Condensed', sans-serif;
-    padding: 5px;
-    color: red;
+.cardReverse {
+    flex-direction: row-reverse;
 }
 
 
-.contentIcon {
+.cardImage {
+    width: 35%;
+    min-width: 125px;
+    min-height: 210px;
+
+}
+
+.cardImage img {
+    width: 100%;
+    height: 100%;
+}
+
+.cardText {
+    width: 60%;
+}
+
+.cardText h3 {
+    font-size: 17px;
+    margin-bottom: 5px;
+}
+
+.dateText {
     display: flex;
-    width: 150px;
-    height: 150px;
-    border: 2px solid #c1c1c19a;
-    border-radius: 55%;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.dateText * {
+    font-size: 12px;
+}
+
+.dateText button {
+    width: 80px;
+    max-width: 35%;
+    height: 20px;
+    border: 2px solid #a8a8a8e8;
+    background-color: #c1c1c170;
+}
+
+.textParagraph {
+    height: 85px;
+    overflow: hidden;
+    line-height: 20px;
+    font-size: 13px;
+    margin-top: 5px;
+}
+
+.seeMore {
+    position: absolute;
+    bottom: 0;
+    height: 40px;
+    width: 95px;
+    background-color: #767676;
+    color: white;
+    font-size: 16px;
+    font-weight: lighter;
+    border: none;
+    border-radius: 5px;
+}
+
+.loadMore{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
     align-items: center;
-    justify-content: center;
+    height: 20vh;
+    margin-top: -30px;
 }
 
-.rocketIcon {
-    width: 70%;
-    height: 60%;
-    color: #1e2022ce;
+.loadMore div {
+    width: 15px;
+    height: 15px;
+    margin-bottom: 5px;
+    background-color: rgb(180, 201, 255);
+    border: 1px solid rgb(118, 157, 255);
 }
 
-.borderDiv {
-    width: 95vw;
-    border-bottom: 2px solid #929292b5;
-    align-self: center;
-}
-
-.headerMainDiv h2 {
-    font-weight: 400;
-    color: #1e2022ce;
-    font-size: 14;
+.loadMore button {
+    height: 30px;
+    width: 120px;
+    margin-top: 20px;
+    border: 1px solid rgb(118, 157, 255);
+    color: rgb(56, 104, 225);
     letter-spacing: 1.1px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+@media  (max-width: 440px) {
+    .cardText h3{
+        font-size: 13px;
+    }
+    .textParagraph {
+        height: 95px;
+        font-size: 11px;
+    }
 }
