--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,6 +1,8 @@
 homeContent {
     display: flex;
     flex-direction: column;
+    width: 100%;
+    height: fit-content;
 }
 
 
@@ -18,6 +20,24 @@ section * {
     font-family: 'Roboto Condensed', sans-serif;
 }
 
+.mainContent {
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+}
+
+.containModal{
+    width: 100%;
+    position: absolute;
+    top: 55%;
+    z-index: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #1e2022;
+}
+
 .card, .cardReverse {
     display: flex;
     flex-direction: row;
@@ -29,6 +49,10 @@ section * {
     background-color: rgba(246, 246, 246, 0.334);
     margin-bottom: 80px;
     cursor: pointer;
+}
+
+.opacityDiv {
+    opacity: 0.4
 }
 
 .cardReverse {
@@ -49,6 +73,7 @@ section * {
 }
 
 .cardText {
+   display: grid;
     width: 60%;
 }
 
@@ -76,16 +101,20 @@ section * {
 }
 
 .textParagraph {
+    display: flex;
+    flex-direction: column;
     height: 85px;
     overflow: hidden;
     line-height: 20px;
     font-size: 13px;
     margin-top: 5px;
+    padding: 10px 0;
 }
 
 .seeMore {
-    position: absolute;
-    bottom: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     height: 40px;
     width: 95px;
     background-color: #767676;
@@ -94,6 +123,8 @@ section * {
     font-weight: lighter;
     border: none;
     border-radius: 5px;
+    cursor: pointer;
+    margin-left: 5px;
 }
 
 .loadMore{
@@ -131,5 +162,9 @@ section * {
     .textParagraph {
         height: 95px;
         font-size: 11px;
+    }
+
+    .containModal{
+        top: 35%
     }
 }
